--- a/ePortfolio/index.html
+++ b/ePortfolio/index.html
@@ -121,7 +121,7 @@
                         <li>Ventes dans un restaurant</li>
                     </a>
                     <a class="texte" href="experiences.html">
-                        <li>Homme à tout faire en restauration</li>
+                        <li>Multitâche en restauration</li>
                     </a>
                     <a class="texte" href="experiences.html">
                         <li>Stage dans un cabinet d'architecte</li>
@@ -135,10 +135,10 @@
                 <h2><a href="projets.html">Projets</a></h2>
                 <ul>
                     <a class="texte" href="projets.html">
-                        <li>Ventes dans un restaurant</li>
+                        <li>Site web Curriculum Vitae</li>
                     </a>
                     <a class="texte" href="projets.html">
-                        <li>Homme à tout faire en restauration</li>
+                        <li>Dispositif de transmission</li>
                     </a>
                     <a class="texte" href="projets.html">
                         <li>[ ... ]</li>
