--- a/ePortfolio/projets.html
+++ b/ePortfolio/projets.html
@@ -41,6 +41,7 @@
             <option value="Programmation">Programmation</option>
             <option value="Développement Web">Développement Web</option>
             <option value="Multi">Multi</option>
+            <option value="Multi">Autre</option>
         </select>
         <button id="resetButton">Réinitialiser</button>
     </div>
@@ -63,6 +64,11 @@
                 <img src="Images/Proj_baie.jpg" alt="Dispositif de transmission">
                 <h2>Dispositif de transmission</h2>
                 <p>Multi<span class="marge"><span class="marge"><span class="marge">2024</span></span></span></p>
+            </a>
+            <a href="Proj_hyg.html" class="card" data-annee="2024" data-categorie="Autre">
+                <img src="Images/Proj_hyg.jpg" alt="Hygiène informatique">
+                <h2>Hygiène informatique</h2>
+                <p>Autre<span class="marge"><span class="marge"><span class="marge">2024</span></span></span></p>
             </a>
             <a href="page3.html" class="card" data-annee="2024" data-categorie="Développement Web">
                 <img src="image3.jpg" alt="Site web Notation de film">
