--- a/ePortfolio/Proj_cam.html
+++ b/ePortfolio/Proj_cam.html
@@ -64,17 +64,17 @@
 
         <section id="Proj_cam5">
             <h2>Logiciel après analyse :</h2>
-            <img src="Images/image.png" alt="Logiciel après analyse">
+            <img src="Images/Proj_cam.png" alt="Logiciel après analyse">
         </section>
 
         <section id="Proj_cam6">
             <h2>Liste des fichiers détectés :</h2>
-            <img src="Images/image.png" alt="Liste des fichiers détectés">
+            <img src="Images/Proj_camls.png" alt="Liste des fichiers détectés">
         </section>
 
         <section id="Proj_cam7">
             <h2>Menu de suppression :</h2>
-            <img src="Images/image.png" alt="Menu de suppression">
+            <img src="Images/Proj_camsup.png" alt="Menu de suppression">
         </section>
 
         <section id="Proj_cam8">
