--- a/ePortfolio/Proj_hyg.html
+++ b/ePortfolio/Proj_hyg.html
@@ -24,13 +24,13 @@
         </ul>
     </nav>
     <main>
-        <section id="Proj_baie1">
+        <section id="Proj_hyg1">
             <h2>Fondement</h2>
             <p></p>
             <p></p>
         </section>
 
-        <section id="Proj_baie2">
+        <section id="Proj_hyg2">
             <h2>Technologies et matériel utilisés</h2>
             <ul>
                 <li>.</li>
@@ -39,7 +39,7 @@
             </ul>
         </section>
 
-        <section id="Proj_baie3">
+        <section id="Proj_hyg3">
             <h2>Répartition des rôles</h2>
             <p>.</p>
             <ul>
@@ -49,7 +49,7 @@
             </ul>
         </section>
 
-        <section id="Proj_baie4">
+        <section id="Proj_hyg4">
             <h2>Déroulement du projet</h2>
             <p>.</p>
             <p>.</p>
@@ -57,29 +57,31 @@
             <p>.</p>
         </section>
 
-        <section id="Proj_baie5">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/7YbK-M7Xrls?si=hpB9wFvqizIIxMsj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+        <section id="Proj_hyg5">
             <h2>Schéma de câblage (salles C100, C101 et C102) :</h2>
             <img src="Images/image.png" alt="Schéma de câblage">
         </section>
 
-        <section id="Proj_baie6">
+        <section id="Proj_hyg6">
             <h2>Heatmap réseau 2,4 GHz :</h2>
             <img src="Images/image.png" alt="Heatmap réseau 2,4 GHz">
         </section>
 
-        <section id="Proj_baie7">
+        <section id="Proj_hyg7">
             <h2>Heatmap réseau 5 GHz :</h2>
             <img src="Images/image.png" alt="Heatmap réseau 5 GHz">
         </section>
 
-        <section id="Proj_baie8">
+        <section id="Proj_hyg8">
             <h2>Contraintes et solutions</h2>
             <p>.</p>
             <p>.</p>
             <p>.</p>
         </section>
 
-        <section id="Proj_baie9">
+        <section id="Proj_hyg9">
             <h2>Résultats</h2>
             <ul>
                 <li>.</li>
