--- a/ePortfolio/Proj_baie.html
+++ b/ePortfolio/Proj_baie.html
@@ -133,6 +133,14 @@
                 réseau, la configuration d’équipements Cisco, et la simulation complète d’un réseau dans Packet Tracer,
                 intégrant un contrôleur WiFi.</p>
         </section>
+        <section>
+            <div id="Pdf">
+                <h2>Rapport sur le travail réalisé</h2>
+                <ul>
+                    <a href="Images/Rapport-SAE1.03.pdf">Rapport SAE1.03</a>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="footer-content">
