--- a/ePortfolio/projets.html
+++ b/ePortfolio/projets.html
@@ -66,7 +66,7 @@
                 <p>Multi<span class="marge"><span class="marge"><span class="marge">2024</span></span></span></p>
             </a>
             <a href="Proj_hyg.html" class="card" data-annee="2024" data-categorie="Autre">
-                <img src="Images/Proj_hyg.jpg" alt="Hygiène informatique">
+                <img src="Images/Proj_hyg.png" alt="Hygiène informatique">
                 <h2>Hygiène informatique</h2>
                 <p>Autre<span class="marge"><span class="marge"><span class="marge">2024</span></span></span></p>
             </a>
