--- a/ePortfolio/projets.html
+++ b/ePortfolio/projets.html
@@ -99,7 +99,7 @@
                 <a href="Confidentialite.html">Politique de confidentialité</a>
             </div>
             <div class="social-icons">
-                <a href="https://www.instagram.com/votre_profil" target="_blank" title="Instagram">
+                <a href="https://www.instagram.com/mtt_2joy/" target="_blank" title="Instagram">
                     <img src="Images/logo-insta.png" alt="Instagram">
                 </a>
                 <a href="https://www.linkedin.com/in/votre_profil" target="_blank" title="LinkedIn">
