--- a/ePortfolio/projets.html
+++ b/ePortfolio/projets.html
@@ -102,7 +102,7 @@
                 <a href="https://www.instagram.com/mtt_2joy/" target="_blank" title="Instagram">
                     <img src="Images/logo-insta.png" alt="Instagram">
                 </a>
-                <a href="https://www.linkedin.com/in/votre_profil" target="_blank" title="LinkedIn">
+                <a href="https://www.linkedin.com/in/matthieu-dejoie-33211433b/" target="_blank" title="LinkedIn">
                     <img src="Images/logo-linkedin.png" alt="LinkedIn">
                 </a>
                 <a href="https://github.com/Grenat-404/SAE.CV" target="_blank" title="Github">
