--- a/ePortfolio/Proj_hyg.html
+++ b/ePortfolio/Proj_hyg.html
@@ -57,6 +57,15 @@
             <p>.</p>
         </section>
 
+        <section>
+            <div id="Pdf">
+                <h2>Exposé réalisé sous format PDF</h2>
+                <ul>
+                    <a href="Images/Cyberdéfense Oral.pdf">Exposé</a>
+                </ul>
+            </div>
+        </section>
+
         <iframe width="560" height="315" src="https://www.youtube.com/embed/7YbK-M7Xrls?si=hpB9wFvqizIIxMsj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
         <section id="Proj_hyg5">
