--- a/ePortfolio/Proj_hyg.html
+++ b/ePortfolio/Proj_hyg.html
@@ -66,7 +66,15 @@
             </div>
         </section>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/7YbK-M7Xrls?si=hpB9wFvqizIIxMsj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <section>
+            <div id="Vid">
+                <h2>Vidéo d'introduction de l'exposé</h2>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/7YbK-M7Xrls?si=hpB9wFvqizIIxMsj"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
 
         <section id="Proj_hyg5">
             <h2>Schéma de câblage (salles C100, C101 et C102) :</h2>
