--- a/ePortfolio/Proj_hyg.html
+++ b/ePortfolio/Proj_hyg.html
@@ -61,7 +61,7 @@
             <div id="Pdf">
                 <h2>Exposé réalisé sous format PDF</h2>
                 <ul>
-                    <a href="Images/Cyberdéfense_Oral.pdf">Exposé</a>
+                    <a href="Images/Cyber_Oral.pdf">Exposé</a>
                 </ul>
             </div>
         </section>
