--- a/ePortfolio/Proj_cam.html
+++ b/ePortfolio/Proj_cam.html
@@ -58,7 +58,7 @@
         <section id="Proj_cam4">
             <h2>Déroulement du projet</h2>
             <p>Le projet a débuté par la création d’un script Python développé par Arthur. Ce script scanne tous les fichiers d’un répertoire et permet de fixer un seuil de taille pour ne conserver que les fichiers volumineux.</p>
-            <p>En parallèle, Cameron a développé une interface graphique avec PyQt5, rendant l’outil plus intuitif. Cette interface permet à l’utilisateur de sélectionner le dossier à analyser et d’afficher les résultats sous forme de liste ou de graphique circulaire.</p>
+            <p>En parallèle, nous avons développé une interface graphique avec PyQt5, rendant l’outil plus intuitif. Cette interface permet à l’utilisateur de sélectionner le dossier à analyser et d’afficher les résultats sous forme de liste ou de graphique circulaire.</p>
             <p>Par la suite, un script PowerShell a été ajouté pour automatiser le lancement des scripts Python. Un second script PowerShell a été conçu pour permettre à l’utilisateur de confirmer la suppression des fichiers identifiés, assurant ainsi la sécurité des données.</p>
         </section>
 
