--- a/ePortfolio/projets.html
+++ b/ePortfolio/projets.html
@@ -45,9 +45,23 @@
         </select>
         <select id="compFilter">
             <option value="">Toutes les compétences</option>
-            <option value="2025">2025</option>
-            <option value="2024">2024</option>
-            <option value="2023">2023</option>
+            <option value="Administrer les réseaux et
+                l’Internet">Administrer les réseaux et
+                l’Internet</option>
+            <option value="Connecter les entreprises et
+                les usagers">Connecter les entreprises et
+                les usagers</option>
+            <option value="Créer des outils et
+                applications informatiques
+                pour les R&T">Créer des outils et
+                applications informatiques
+                pour les R&T</option>
+            <option value="Administrer un système
+                d’information sécurisé">Administrer un système
+                d’information sécurisé</option>
+            <option value="Surveiller un système
+                d’information sécurisé">Surveiller un système
+                d’information sécurisé</option>
         </select>
         <button id="resetButton">Réinitialiser</button>
     </div>
