--- a/ePortfolio/projets.html
+++ b/ePortfolio/projets.html
@@ -76,19 +76,19 @@
                 <h2>Hygiène informatique</h2>
                 <p>Autre<span class="marge"><span class="marge"><span class="marge">2024</span></span></span></p>
             </a>
-            <a href="page3.html" class="card" data-annee="2024" data-categorie="Développement Web">
+            <a href="page3.html" class="card" data-annee="2024" data-categorie="Développement Web" data-competences="">
                 <img src="image3.jpg" alt="Site web Notation de film">
                 <h2>Site web Notation de film</h2>
                 <p>Développement Web<span class="marge"><span class="marge"><span
                                 class="marge">2024</span></span></span></p>
             </a>
-            <a href="page3.html" class="card" data-annee="2023" data-categorie="Programmation">
+            <a href="page3.html" class="card" data-annee="2023" data-categorie="Programmation" data-competences="">
                 <img src="image3.jpg" alt="Programme Code César">
                 <h2>Programme Code César</h2>
                 <p>Programmation<span class="marge"><span class="marge"><span class="marge">2023</span></span></span>
                 </p>
             </a>
-            <a href="page3.html" class="card" data-annee="2023" data-categorie="Programmation">
+            <a href="page3.html" class="card" data-annee="2023" data-categorie="Programmation" data-competences="">
                 <img src="image3.jpg" alt="Programme Roulette Française">
                 <h2>Programme Roulette Française</h2>
                 <p>Programmation<span class="marge"><span class="marge"><span class="marge">2023</span></span></span>
