--- a/ePortfolio/projets.html
+++ b/ePortfolio/projets.html
@@ -31,12 +31,7 @@
     <div class="search-container">
         <input type="text" placeholder="Rechercher" id="searchInput">
         <select id="yearFilter">
-            <option value=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-calendar-event" viewBox="0 0 16 16">
-                    <path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5z" />
-                    <path
-                        d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z" />
-                Toutes les années</svg></option>
+            <option value="">Toutes les années</option>
             <option value="2025">2025</option>
             <option value="2024">2024</option>
             <option value="2023">2023</option>
@@ -59,15 +54,13 @@
 
     <main>
         <div class="card-container">
-            <a href="Proj_CV.html" class="card" data-annee="2024" data-categorie="Développement Web"
-                data-competences="Programmer">
+            <a href="Proj_CV.html" class="card" data-annee="2024" data-categorie="Développement Web" data-competences="Programmer">
                 <img src="Images/CV_flou.png" alt="Site web Curriculum Vitae">
                 <h2>Site web Curriculum Vitae</h2>
                 <p>Développement Web<span class="marge"><span class="marge"><span
                                 class="marge">2024</span></span></span></p>
             </a>
-            <a href="Proj_cam.html" class="card" data-annee="2025" data-categorie="Programmation"
-                data-competences="Programmer">
+            <a href="Proj_cam.html" class="card" data-annee="2025" data-categorie="Programmation" data-competences="Programmer">
                 <img src="Images/Proj_cam.png" alt="Outil de traitement de données">
                 <h2>Outil de traitement de données</h2>
                 <p>Programmation<span class="marge"><span class="marge"><span class="marge">2025</span></span></span>
@@ -78,8 +71,7 @@
                 <h2>Dispositif de transmission</h2>
                 <p>Multi<span class="marge"><span class="marge"><span class="marge">2024</span></span></span></p>
             </a>
-            <a href="Proj_hyg.html" class="card" data-annee="2024" data-categorie="Autre"
-                data-competences="Administrer">
+            <a href="Proj_hyg.html" class="card" data-annee="2024" data-categorie="Autre" data-competences="Administrer">
                 <img src="Images/Proj_hyg.png" alt="Hygiène informatique">
                 <h2>Hygiène informatique</h2>
                 <p>Autre<span class="marge"><span class="marge"><span class="marge">2024</span></span></span></p>
