--- a/ePortfolio/Contact.html
+++ b/ePortfolio/Contact.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="header-container7">
@@ -29,7 +31,10 @@
                 <li>Email : <a href="mailto:mattdej.pl@gmail.com">mattdej.pl@gmail.com</a></li>
                 <li>Téléphone : <a href="tel:+33698327251">06.98.32.72.51</a></li>
                 <li>Adresse : </li>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5331.14338466172!2d7.370907876649491!3d48.07990967123727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479165fe816efe81%3A0xe81aed0f985cebac!2s73a%20Rte%20de%20Neuf-Brisach%2C%2068000%20Colmar!5e0!3m2!1sfr!2sfr!4v1734285981572!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d92127.80155566538!2d7.309984347907713!3d48.111461998495734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479165dff670c1cf%3A0xe35d7e3e616ce966!2s68000%20Colmar!5e1!3m2!1sfr!2sfr!4v1746801666159!5m2!1sfr!2sfr"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </ul>
         </section>
     </main>
@@ -56,4 +61,5 @@
         </div>
     </footer>
 </body>
+
 </html>
