--- a/ePortfolio/Contact.html
+++ b/ePortfolio/Contact.html
@@ -26,7 +26,7 @@
     <main>
         <section>
             <h2>Nous contacter</h2>
-            <p>Vous pouvez nous joindre via les moyens suivants :</p>
+            <p>Vous pouvez me joindre via les moyens suivants :</p>
             <ul>
                 <li>Email : <a href="mailto:mattdej.pl@gmail.com">mattdej.pl@gmail.com</a></li>
                 <li>Téléphone : <a href="tel:+33698327251">06.98.32.72.51</a></li>
