--- a/ePortfolio/projets.html
+++ b/ePortfolio/projets.html
@@ -54,6 +54,12 @@
 
     <main>
         <div class="card-container">
+            <a href="page3.html" class="card" data-annee="2025" data-categorie="Programmer" data-competences="Programmer">
+                <img src="Images/img.png" alt="Site web Django">
+                <h2>Site web Django</h2>
+                <p>Programmer<span class="marge"><span class="marge"><span
+                                class="marge">2025</span></span></span></p>
+            </a>
             <a href="Proj_CV.html" class="card" data-annee="2024" data-categorie="Développement Web" data-competences="Programmer">
                 <img src="Images/CV_flou.png" alt="Site web Curriculum Vitae">
                 <h2>Site web Curriculum Vitae</h2>
