--- a/ePortfolio/projets.html
+++ b/ePortfolio/projets.html
@@ -31,7 +31,7 @@
     <div class="search-container">
         <input type="text" placeholder="Rechercher" id="searchInput">
         <select id="yearFilter">
-            <option value="">Toutes les années</option>
+            <option value=""><i class="bi bi-calendar-event">Toutes les années</i></option>
             <option value="2025">2025</option>
             <option value="2024">2024</option>
             <option value="2023">2023</option>
