--- a/ePortfolio/projets.html
+++ b/ePortfolio/projets.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/c594fc60cc.js" crossorigin="anonymous"></script>
     <title>Projets - ePortfolio</title>
     <link rel="stylesheet" href="style.css">
     <style>
