--- a/ePortfolio/projets.html
+++ b/ePortfolio/projets.html
@@ -31,11 +31,13 @@
 
     <div class="search-container">
         <input type="text" placeholder="Rechercher" id="searchInput">
+        <i class="fa-regular fa-calendar-days">
         <select id="yearFilter">
             <option value=""><i class="fa-regular fa-calendar-days">Toutes les années</i></option>
             <option value="2025">2025</option>
             <option value="2024">2024</option>
             <option value="2023">2023</option>
+            </i>
         </select>
         <select id="categoryFilter">
             <option value="">Toutes les catégories</option>
